src/test/k3s/help/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: help
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: help
  template:
    metadata:
      labels:
        app.kubernetes.io/name: help
    spec:
      containers:
        - name: help
          image: ${image.help}
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          volumeMounts:
            - name: help
              mountPath: /home/static
              readOnly: true
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0
      volumes:
        - name: help
          configMap:
            name: help
