src/test/k3s/help/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: help
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: help
